--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #DOD7DB;
-  font-family: Arial, Helvetica, sans-serif
+  background-color: #D0D7DB;
+  font-family : Arial, Helvetica, sans-serif
 }
 
 a{
@@ -27,7 +27,7 @@ header{
 
 form{
   padding: 30px;
-  background-color: #DOD7DB;
+  background-color: white ;
   border-radius: 10px;
   display: flex;
   box-shadow: 0px 20px 60px rgba(65, 50, 100,0.08);
@@ -36,12 +36,12 @@ form{
 
 .instructions{
   padding: 16px;
-  border: 1px solid rgba(39 ,33, 66, 0.5);
+  border: 1px solid #5D82A2;
   width: 80%;
   font-size: 16px;
   border-radius: 50px;
   line-height: 20px;
-  color: #272044;
+  color: #5D82A2;
 }
 
 .submit-button{
@@ -51,8 +51,9 @@ form{
   border: none;
   border-radius: 50px;
   padding: 14px 20px;
-width: 150px;
-font-size: 16px;
+  width: 150px;
+  font-size: 16px;
+  border-color: #5D82A2;
 }
 
 .poem{
