--- a/src/style.css
+++ b/src/style.css
@@ -25,13 +25,27 @@ header{
   margin-bottom: 30px;
 }
 
-form{
-  padding: 30px;
-  background-color: white ;
+.form-container{
+  padding: 20px 30px;
+  background-color: white;
   border-radius: 10px;
-  display: flex;
-  box-shadow: 0px 20px 60px rgba(65, 50, 100,0.08);
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
   margin-bottom: 30px;
+}
+
+.hint{
+  line-height: 1.5;
+  font-size: 12px;
+  margin-top: 10px;
+  opacity: 0.6;
+}
+
+.hidden{
+display:none
+}
+
+form{
+  display: flex;
 }
 
 .instructions{
@@ -64,6 +78,22 @@ form{
   line-height: 2;
   border-left: 3px solid #5D82A2;
   box-shadow: 0px 4px 30px 0px rgba(39 ,33, 66, 0.03);
+}
+
+.generating{
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
 
 footer{
